fix: update trash page
